--- a/dns-proxy.cfg
+++ b/dns-proxy.cfg
@@ -34,6 +34,11 @@ timeout = 5.0
 # Maximum CNAME recursion depth
 max-recursion = 1000
 
+# Remove IPv6 AAAA records from responses
+# true  = CNAME flattening + IPv6 removal (IPv4-only responses)
+# false = CNAME flattening only (keep IPv6 records for dual-stack)
+remove-aaaa = false
+
 [cache]
 # Maximum number of cached entries
 max-size = 10000
