fix: Correct PID file permissions after privilege drop
- Changed PID file path to /var/run/dns-proxy/dns-proxy.pid
- Added directory validation in security.py create_pid_file()
- Updated systemd service to use native directory management
- Added path validation at startup in main.py
- Fixed log file path to use /var/log/dns-proxy/ subdirectory

This resolves the issue where the service couldn't write PID file
after dropping privileges from root to dns-proxy user.

--- a/dns-proxy.cfg
+++ b/dns-proxy.cfg
@@ -20,7 +20,7 @@ user = dns-proxy
 group = dns-proxy
 
 # PID file location
-pid-file = /var/run/dns-proxy.pid
+pid-file = /var/run/dns-proxy/dns-proxy.pid
 
 [forwarder-dns]
 # Upstream DNS server configuration
@@ -66,7 +66,7 @@ max-ttl = 3600
 
 [log-file]
 # Log file path (use 'none' to disable file logging)
-log-file = /var/log/dns-proxy.log
+log-file = /var/log/dns-proxy/dns-proxy.log
 
 # Debug level: DEBUG, INFO, WARNING, ERROR
 debug-level = INFO
