--- a/dns-proxy.service
+++ b/dns-proxy.service
@@ -9,11 +9,8 @@ Type=simple
 User=root
 Group=root
 
-# Pre-execution setup with proper error handling
+# Configuration file check (this still needs a shell command)
 ExecStartPre=/bin/sh -c 'test -f /etc/dns-proxy/dns-proxy.cfg || (echo "Config file missing" && exit 1)'
-ExecStartPre=/bin/sh -c 'mkdir -p /var/run /var/log /var/lib/dns-proxy'
-ExecStartPre=/bin/sh -c 'touch /var/log/dns-proxy.log && chown dns-proxy:dns-proxy /var/log/dns-proxy.log && chmod 640 /var/log/dns-proxy.log || echo "Warning: Could not setup log file ownership"'
-ExecStartPre=/bin/sh -c 'chown dns-proxy:dns-proxy /var/lib/dns-proxy && chmod 755 /var/lib/dns-proxy || echo "Warning: Could not setup data directory ownership"'
 
 ExecStart=/usr/bin/dns-proxy --config /etc/dns-proxy/dns-proxy.cfg
 ExecReload=/bin/kill -HUP $MAINPID
@@ -22,11 +19,24 @@ RestartSec=5
 TimeoutStartSec=30
 TimeoutStopSec=30
 
+# Directory and file creation (systemd native directives)
+# These directives automatically create and manage directories:
+#   RuntimeDirectory creates /var/run/dns-proxy (or /run/dns-proxy)
+#   LogsDirectory creates /var/log/dns-proxy
+#   StateDirectory creates /var/lib/dns-proxy
+# All directories are automatically owned by the User/Group when service starts
+RuntimeDirectory=dns-proxy
+RuntimeDirectoryMode=0755
+LogsDirectory=dns-proxy
+LogsDirectoryMode=0755
+StateDirectory=dns-proxy
+StateDirectoryMode=0755
+
 # Security settings (but still allow root initially for port binding)
 NoNewPrivileges=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/var/log /var/run /var/lib/dns-proxy
+# ReadWritePaths is automatically set by the directory directives above
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE CAP_SETUID CAP_SETGID CAP_CHOWN CAP_FOWNER CAP_DAC_OVERRIDE
 AmbientCapabilities=CAP_NET_BIND_SERVICE CAP_SETUID CAP_SETGID
 
