--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@
 repos:
   # Basic file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -21,7 +21,7 @@ repos:
 
   # Python code formatting
   - repo: https://github.com/psf/black
-    rev: 23.12.1
+    rev: 25.1.0
     hooks:
       - id: black
         language_version: python3
@@ -29,14 +29,14 @@ repos:
 
   # Import sorting
   - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
+    rev: 6.0.1
     hooks:
       - id: isort
         args: ['--profile', 'black', '--line-length', '100']
 
   # Linting
   - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
+    rev: 7.3.0
     hooks:
       - id: flake8
         args: [
@@ -47,7 +47,7 @@ repos:
 
   # Type checking with mypy
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
+    rev: v1.16.1
     hooks:
       - id: mypy
         args: [
@@ -61,14 +61,13 @@ repos:
         ]
         additional_dependencies: [
           'types-requests',
-          'types-PyYAML',
-          'twisted-stubs'
+          'types-PyYAML'
         ]
         files: '^(dns_proxy|tests|scripts)/.*\.py$'
 
   # Security checks
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.6
+    rev: 1.8.6
     hooks:
       - id: bandit
         args: ['-ll', '-r', 'dns_proxy', 'scripts']
