fix: Improve constants checker with better type hints and context awareness
- Add proper type annotations (Any instead of any)
- Fix mypy.ini comment that caused parsing error
- Implement context-aware skipping for percentage calculations
- Reduce false positives from 34 to 26 violations

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,7 +9,7 @@ warn_unreachable = True
 strict_optional = True
 no_implicit_optional = True
 check_untyped_defs = True
-disallow_untyped_defs = False  # Start permissive, can tighten later
+disallow_untyped_defs = False
 disallow_incomplete_defs = True
 disallow_untyped_decorators = False
 
