fix: Fix SelectionStrategy.LATENCY bug and improve mypy configuration
- Fixed bug: SelectionStrategy.LATENCY doesn't exist, should be LOWEST_LATENCY
- Added proper mypy.ini with stricter type checking
- Updated pre-commit to use mypy.ini configuration
- Fixed f-string placeholders and line length issues
- mypy now catches attribute errors like Pylance does

This was a real bug that would have caused AttributeError at runtime\!

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,17 +51,12 @@ repos:
     hooks:
       - id: mypy
         args: [
-          '--ignore-missing-imports',
-          '--no-strict-optional',
-          '--warn-unused-ignores',
-          '--warn-redundant-casts',
-          '--warn-return-any',
-          '--warn-unreachable',
-          '--pretty'
+          '--config-file=mypy.ini'
         ]
         additional_dependencies: [
           'types-requests',
-          'types-PyYAML'
+          'types-PyYAML',
+          'twisted'  # Add twisted for better type checking
         ]
         files: '^(dns_proxy|tests|scripts)/.*\.py$'
 
