--- a/mypy.ini
+++ b/mypy.ini
@@ -1,56 +1,43 @@
 [mypy]
-# Global options
-python_version = 3.8
-warn_return_any = True
-warn_unused_configs = True
-warn_redundant_casts = True
-warn_unused_ignores = True
-warn_unreachable = True
-strict_optional = True
-no_implicit_optional = True
-check_untyped_defs = True
-disallow_untyped_defs = False
-disallow_incomplete_defs = True
-disallow_untyped_decorators = False
-
-# Output
-pretty = True
+# Basic settings
+python_version = 3.9
 show_error_codes = True
-show_column_numbers = True
+pretty = True
 
 # Import discovery
 namespace_packages = True
-explicit_package_bases = True
+follow_imports = normal
+ignore_missing_imports = False
+warn_unused_ignores = True
 
-# Ignore missing imports for third-party libs without stubs
+# Strict checking (but not --strict to allow gradual adoption)
+check_untyped_defs = True
+disallow_untyped_calls = True
+disallow_incomplete_defs = True
+# Too many Twisted decorators, so we disable this check
+disallow_untyped_decorators = False
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_unreachable = True
+warn_return_any = True
+no_implicit_optional = True
+strict_optional = True
+strict_equality = True
+
+# Error handling
+show_traceback = True
+raise_exceptions = True
+
+# Per-module options for gradual adoption
 [mypy-twisted.*]
 ignore_missing_imports = True
 
-[mypy-dns.*]
-ignore_missing_imports = True
-
-[mypy-cachetools.*]
-ignore_missing_imports = True
-
-[mypy-setuptools]
-ignore_missing_imports = True
-
-# Per-module options for gradual typing
 [mypy-tests.*]
 # Less strict for tests
 disallow_untyped_defs = False
-check_untyped_defs = True
-ignore_errors = False
+disallow_untyped_calls = False
 
 [mypy-scripts.*]
-# Scripts can be less strict
+# Less strict for utility scripts
 disallow_untyped_defs = False
-check_untyped_defs = True
-
-[mypy-dns_proxy.health.*]
-# Stricter for new health monitoring module
-disallow_untyped_defs = True
-
-[mypy-setup]
-# Setup.py doesn't need strict typing
-ignore_errors = True
+disallow_untyped_calls = False
