--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,37 +1,13 @@
-# Development dependencies for dns-proxy
-
-# Include production requirements
--r requirements.txt
-
-# Testing
-pytest>=8.0.0
+# Development dependencies for testing and code quality
+pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-timeout>=2.1.0
-pytest-mock>=3.10.0
 pytest-asyncio>=0.21.0
-pytest-twisted>=1.13.0
-coverage>=7.0.0
-
-# Code quality
-pylint>=3.0.0
-flake8>=6.0.0
-black>=23.0.0
-isort>=5.12.0
-mypy>=1.0.0
-
-# Documentation
-sphinx>=6.0.0
-sphinx-rtd-theme>=1.2.0
-
-# Development tools
-ipython>=8.0.0
-ipdb>=0.13.0
+coverage[toml]>=7.0.0
 pre-commit>=3.0.0
-
-# Performance testing
-locust>=2.0.0
-memory-profiler>=0.60.0
-
-# Security scanning
-bandit>=1.7.0
-safety>=2.3.0
+black>=23.0.0
+isort>=5.11.0
+flake8>=6.0.0
+mypy>=1.0.0
+types-setuptools
+bandit[toml]>=1.7.0
